// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HdToast 'primaryLabel' text binds to primary <button> 1`] = `
<div class="toast">
  <p class="toast__text"></p>
  <section class="toast__controls"><button class="toast__control toast__control--secondary"></button> <button class="toast__control toast__control--primary">random-text</button></section>
</div>
`;

exports[`HdToast 'secondaryLabel' text binds to secondary <button> 1`] = `
<div class="toast">
  <p class="toast__text"></p>
  <section class="toast__controls"><button class="toast__control toast__control--secondary">random-text</button> <button class="toast__control toast__control--primary"></button></section>
</div>
`;

exports[`HdToast <slot> renders inside .toast__text 1`] = `
<div class="toast">
  <p class="toast__text">
    <div id="slot"></div>
  </p>
  <!---->
</div>
`;

exports[`HdToast computed computedClasses 'toast--isClosing' when isClosing is true 1`] = `
<div class="toast">
  <p class="toast__text"></p>
  <!---->
</div>
`;

exports[`HdToast computed computedClasses 'toast--isClosing' when isClosing is true 2`] = `
<div class="toast toast--isClosing">
  <p class="toast__text"></p>
  <!---->
</div>
`;

exports[`HdToast computed computedClasses 'toast--isOpen' when isOpen is true 1`] = `
<div class="toast">
  <p class="toast__text"></p>
  <!---->
</div>
`;

exports[`HdToast computed computedClasses 'toast--isOpen' when isOpen is true 2`] = `
<div class="toast toast--isOpen">
  <p class="toast__text"></p>
  <!---->
</div>
`;

exports[`HdToast renders component 1`] = `
<div class="toast">
  <p class="toast__text"></p>
  <!---->
</div>
`;

exports[`HdToast renders default slot 1`] = `
<div class="toast">
  <p class="toast__text">
    <div id="slot"></div>
  </p>
  <!---->
</div>
`;
